- 1.0.0
Initial release

- 1.0.1
Updates to NuGet XML documentation

- 1.0.2
Automation of NuGet release notes

- 1.0.3
Added Restart(), LogStopwatchList(), and GetStopwatchKeys() 

- 1.0.4
Added TryStart() that generates a stopwatch key using caller identity information
Updated inaccurate XML documentation

- 1.0.5
Augmented readme.md
Added constructor that lacks a logger parameter

- 1.0.6
Added TryStartNoLog() that generates a stopwatch key using caller identity information

- 1.0.7
Correction in readme.md

- 1.0.8
Added NuGet icon

- 1.0.9
Updated readme.md

- 1.0.10
Removed explicit Serilog support in favor of simply taking in ILogger instance
Added unit tests and unit test automation